01-enterprise-landing-zone/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-web-service
  namespace: enterprise-landing-zone
  labels:
    app.kubernetes.io/name: enterprise-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: enterprise-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
